Updated the footer and the CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   <body>
     <h1>Welcome to the English Poem Generator</h1>
 
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/ivyscarlett-tech" target="_blank"
+        >Ivy Scarlett</a
+      >
+      and is
+      <a
+        href="https://github.com/ivyscarlett-tech/english-poem-generator"
+        target="_blank"
+        >on Github.</a
+      >
+      and is hosted on
+      <a href="https://ivy-poem-generator.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
