Basic HTML structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>A.I. Poem Generator</title>
+    <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to the English Poem Generator</h1>
+    <header>
+      <h1>AI English Poem Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter your poem topic here"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The sun has burst the sky
+        <br />
+        Because I love you
+      </div>
+    </main>
 
     <footer>
       This AI project was coded by
