Added a few classes to HTML and various styling to CSS file

--- a/index.html
+++ b/index.html
@@ -7,44 +7,47 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI English Poem Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>AI English Poem Generator</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter your poem topic here"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The sun has burst the sky
-        <br />
-        Because I love you
-      </div>
-    </main>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter your poem topic here"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The sun has burst the sky
+          <br />
+          Because I love you
+        </div>
+      </main>
 
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/ivyscarlett-tech" target="_blank"
-        >Ivy Scarlett</a
-      >
-      and is
-      <a
-        href="https://github.com/ivyscarlett-tech/english-poem-generator"
-        target="_blank"
-        >on Github.</a
-      >
-      and is hosted on
-      <a href="https://ivy-poem-generator.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/ivyscarlett-tech" target="_blank"
+          >Ivy Scarlett</a
+        >
+        and is
+        <a
+          href="https://github.com/ivyscarlett-tech/english-poem-generator"
+          target="_blank"
+          >on Github.</a
+        >
+        and is hosted on
+        <a href="https://ivy-poem-generator.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
 
     <script src="src/index.js"></script>
   </body>
